
 o fixed issue in ./configure with ocamlfind on Win32.
 o fixed compilation when laglgnomecanvas is missing (bug introduced in 1.8.4). 
 o fixed more issues with 'make -j'.

version 1.8.4, February 4, 2014
-------------------------------
 o fixed [Graphml] printer (contributed by Johannes Schauer)
 o Components: the components of [scc_list] are provided in the same order than
 the ones of [scc_array].
 o fix compilation with 'make -j'
 o Graphviz: handle attribute penwidth on edges and vertices
 o also install graph.o and graph.cmxs
 o fixed installation with ocamlfind (thanks to Virgile Prevosto)
 o new functions [gnp] and [gnp_labeled] in module [Rand] to generate random
   graphs using the G(n,p) model (contributed by Thomas Aubry)
 o Prim's algorithm (in module [Prim]; not exported in [Pack])
   (contributed by Thomas Aubry)
 o Graphviz: support for nested subgraphs. (Backward-incompatible change:
   add 'sg_parent = None' to obtain subgraphs whose parents are the main graph)
 o Graphviz: edges and vertices can now receive multiple styles.
   (Backward-incompatible change: constructors `Style now require a list as
   argument)
 o Graphviz: new vertex style 'rounded'
 o Merge: fixed bug with vertices with no incoming nor outcoming edge.
 o fixed compilation issue with OCaml 3.12.1

version 1.8.3, April 17, 2013
-----------------------------
 o new module Merge implementing several different merges of vertices and
   edges into a graph (contributed by Emmanuel Haucourt)
 o fixed DOT parser (contributed by Alex Reece)
 o Topological: fixed bug in presence of disjoint cycles; new implementation
 o new module [Graphml] to export graphs into the graphml format
  (contributed by Pietro Abate)
 o Builder.S now contains functions remove_*.
 o modified Fixpoint module so that it also works with unlabeled
   graphs, break backward compatibility yet (contributed by Markus W. Weissmann)
 o support of lablgtk2 installed with findlib (contributed by B. Monate)